Replace h1 with MudText

--- a/LabyrinthianDemo/Pages/Index.razor
+++ b/LabyrinthianDemo/Pages/Index.razor
@@ -3,7 +3,7 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Labyrinthian Demo</h1>
+<MudText Typo="Typo.h3" Align="Align.Center">Labyrinthian Demo</MudText>
 
 <MazeForm />
 
